mark presenty issue solve