@@ -33,50 +33,73 @@ public class AttendanceController {
                                 @RequestParam String status,
                                 HttpSession session, Model model) {
         String role = (String) session.getAttribute("role");
-        Integer teacherId = (Integer) session.getAttribute("userId");
-        if (role == null || teacherId == null) {
+        // LoginController stores teacher id under "teacherId" and students under "userId".
+        Object teacherIdObj = session.getAttribute("teacherId");
+
+        // Validate authentication and authorization
+        if (role == null) {
             return "redirect:/login";
         }
         if (!role.equals("TEACHER")) {
             return "redirect:/student/profile";
         }
-        System.out.println("Looking for courseId: '" + courseId + "'");
-        System.out.println("[DEBUG] Received userId: " + userId + ", courseId: '" + courseId + "', status: '" + status + "'");
-        User student = userRepository.findById(userId).orElse(null);
-        Courses course = coursesRepository.findById(courseId).orElse(null);
-        if (student == null || course == null) {
-            String errorMsg = "Invalid student or course.";
-            return "redirect:/teacher/dashboard?attendanceMsg=" + java.net.URLEncoder.encode(errorMsg, java.nio.charset.StandardCharsets.UTF_8) + "&attendanceStatus=ERROR";
+        if (teacherIdObj == null) {
+            // teacher session not present - force login
+            return "redirect:/login";
         }
+
+        // Validate and load student
+        User student = userRepository.findById(userId).orElse(null);
+        if (student == null) {
+            return "redirect:/teacher/dashboard?error=Student not found";
+        }
+
+        // Validate and load course
+        Courses course = coursesRepository.findById(courseId).orElse(null);
+        if (course == null) {
+            return "redirect:/teacher/dashboard?error=Course not found";
+        }
+
+        // Check for duplicate attendance
+        if (attendanceRepository.existsByUserUserIdAndCourseCourseIdAndAttendanceDate(
+            userId.longValue(), courseId.longValue(), LocalDate.now())) {
+            return "redirect:/teacher/dashboard?error=Attendance already marked for today";
+        }
+
+        // Create attendance record
         Attendance attendance = new Attendance();
         attendance.setUser(student);
         attendance.setCourse(course);
         attendance.setAttendanceDate(LocalDate.now());
-        try {
-            attendance.setStatus(AttendanceStatus.valueOf(status.toUpperCase()));
-        } catch (IllegalArgumentException e) {
-            String errorMsg = "Invalid attendance status.";
-            return "redirect:/teacher/dashboard?attendanceMsg=" + java.net.URLEncoder.encode(errorMsg, java.nio.charset.StandardCharsets.UTF_8) + "&attendanceStatus=ERROR";
-        }
         attendance.setCreatedAt(new java.sql.Time(System.currentTimeMillis()));
+        
+        // Parse and set status
+        AttendanceStatus attendanceStatus;
+        try {
+            attendanceStatus = AttendanceStatus.valueOf(status.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            return "redirect:/teacher/dashboard?error=Invalid attendance status";
+        }
+        attendance.setStatus(attendanceStatus);
         attendanceRepository.save(attendance);
+
+        // Build friendly message and redirect
         String studentName = student.getFirstName() + " " + student.getLastName();
-        String attendanceMsg = "";
-        String attendanceStatus = status.toUpperCase();
+        String attendanceMsg;
         switch (attendanceStatus) {
-            case "PRESENT":
+            case PRESENT:
                 attendanceMsg = "Present marked for student " + studentName;
                 break;
-            case "ABSENT":
+            case ABSENT:
                 attendanceMsg = "Absent marked for student " + studentName;
                 break;
-            case "LATE":
+            case LATE:
                 attendanceMsg = "Late marked for student " + studentName;
                 break;
             default:
                 attendanceMsg = "Attendance marked for student " + studentName;
         }
-        return "redirect:/teacher/dashboard?attendanceMsg=" + java.net.URLEncoder.encode(attendanceMsg, java.nio.charset.StandardCharsets.UTF_8) + "&attendanceStatus=" + attendanceStatus;
+        return "redirect:/teacher/dashboard?attendanceMsg=" + java.net.URLEncoder.encode(attendanceMsg, java.nio.charset.StandardCharsets.UTF_8) + "&attendanceStatus=" + attendanceStatus.name();
     }
 
     @GetMapping("/attendance")
